Added calendar date selection functionality. Display date selected above calendar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="OnBackground">On Background</string>
     <string name="OnSurface">On Surface</string>
     <string name="OnError">On Error</string>
+    <string name="Date">Today\'s Date</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
