--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,23 @@
     <string name="Freezer">Freezer</string>
     <string name="category_prompt">Category</string>
     <string name="product_name">"Product "</string>
+    <string name="enter_search_query">Enter search query</string>
+    <string name="add_breakfast">Add Breakfast</string>
+    <string name="add_lunch">Add Lunch</string>
+    <string name="add_dinner">Add Dinner</string>
+    <string name="dinner">Dinner</string>
+    <string name="lunch">Lunch</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="textview">TextView</string>
+    <string name="date">Date</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
+    <string name="submit">Submit</string>
+    <string name="carbohydrates">Carbohydrates:</string>
+    <string name="serving_size_in_grams">Serving size in grams:</string>
+    <string name="meal">Meal:</string>
+    <string name="enter_amount">Enter amount</string>
+    <string name="protein">Protein</string>
+    <string name="fat">Fat:</string>
 
 </resources>
